@@ -39,45 +39,6 @@ ccss_style_t
 @self: 
 
 
-<!-- ##### FUNCTION ccss_style_draw_line ##### -->
-<para>
-
-</para>
-
-@self: 
-@cr: 
-@x1: 
-@x2: 
-@y1: 
-@y2: 
-
-
-<!-- ##### FUNCTION ccss_style_draw_outline ##### -->
-<para>
-
-</para>
-
-@self: 
-@cr: 
-@x: 
-@y: 
-@width: 
-@height: 
-
-
-<!-- ##### FUNCTION ccss_style_draw_rectangle ##### -->
-<para>
-
-</para>
-
-@self: 
-@cr: 
-@x: 
-@y: 
-@width: 
-@height: 
-
-
 <!-- ##### FUNCTION ccss_style_get_double ##### -->
 <para>
 
