@@ -3,10 +3,12 @@ exec_prefix=@exec_prefix@
 libdir=@libdir@
 includedir=@includedir@
 
+ccss_with_rsvg=@ccss_with_rsvg@
+
 Name: libccss-1
 Description: The Cairo CSS Library
 Version: @VERSION@
-Requires: @CCSS_DEPS@
-Libs: -L${libdir} -lccss-1
+Requires: @CCSS_CAIRO_DEPS@
+Libs: -L${libdir} -lccss-cairo-1
 Cflags: -I${includedir}/libccss-1
 
